Ticketing: Fixed continous text overflown issue in ticket popups

--- a/agile-frontend/WebContent/flatfull/css/misc/agile-ticketing.css
+++ b/agile-frontend/WebContent/flatfull/css/misc/agile-ticketing.css
@@ -50,6 +50,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	font-size: 13px;
+  word-break: break-all;
 }
 
 .last-notes-drp-dwn {
